[package]
name = "miconau"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = [ "derive" ] }
ctrlc = "3.4.4"
midir = "0.9.1"
mpvipc = "1.3.0"
rodio = "0.19.0"

[[bin]]
name = "miconau"
path = "src/miconau/main.rs"

[[bin]]
name = "list-devices"
path = "src/list-devices/main.rs"
