[package]
name = "miconau"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = [ "derive" ] }
midir = "0.10.1"
mpvipc = "1.3.0"
actix-web = "4.4.1"
actix-rt = "2.9.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
signal-hook = "0.3.17"

[[bin]]
name = "miconau"
path = "src/miconau/main.rs"
