[package]
name = "miconau"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = [ "derive" ] }
midir = "0.10.1"
mpvipc = "1.3.0"
axum = { version = "0.8.4", features = ["macros", "multipart"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
signal-hook = "0.3.17"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower = "0.5.2"
tower-http = { version = "0.5.0", features = ["fs"] }
futures-util = "0.3.31"
lofty = "0.22"

[[bin]]
name = "miconau"
path = "src/miconau/main.rs"
